# messaging-service

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/messaging_service/: __init__.py  api.py
src/messaging_service/api/: __init__.py  auth.py
tests/messaging_service/: __init__.py
