[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "messaging_service"
version = "0.0.0"
authors = [
    {name = "Mehmet Baris POLAT", email = "mehmetbarispolat@gmail.com"},
]
description = "Messaging Service"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "redis>=5.0.1",
    "websockets>=12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.7",
    "sqlmodel>=0.0.14",
    "httpx>=0.26.0"
]

[project.optional-dependencies]
dev = ["black>=23.3.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
messaging-service = 'messaging_service:main'
